login,signup functionality added,signup page modified

--- a/src/Components/authentication/LoginStyles.css
+++ b/src/Components/authentication/LoginStyles.css
@@ -1,29 +1,90 @@
-.wrapper-login{
-    height: 100vh;
-    display:flex;
-    align-items: center;
-}
-.login{
+
+
+.login {
     margin: auto;
     text-align: center;
-    width: 35%;
-    height: 50%;
+    width: 40%;
+    height: 70%;
     background-color: #2f2f2f;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
-.login form{
+.login h1{
+    display: flex;
+    align-items: center;
+    margin: -6rem 0 0rem 0 ;
+    padding: 0;
+}
+.login h1 svg{
+    color: #ff3d3d;
+}
+.login form {
+    padding-top: 4rem;
+    margin: 0 0 -4rem 0;
     width: 80%;
     display: flex;
     flex-direction: column;
 }
-.login form a{
-    width: 50%;
+
+.login form a {
+    width: 60%;
     margin: auto;
 }
-.login form a button{
+
+.login form a button {
     width: 100%;
+    padding: 0.5rem 0 0.5rem 0;
+    margin: 2rem 0 0 0;
     cursor: pointer;
+    font-size: 1.1rem;
+    font-weight: 400;
+    border-radius: 5px;
+    border: none;
+}
+
+.login input {
+    background-color: transparent;
+    border: none;
+    border-bottom: 0.7px solid #adadad;
+    width: 100%;
+    color: #fff;
+    font-size: 1.1rem;
+}
+
+.login input:focus {
+    outline: none;
+    background-color: transparent !important;
+}
+
+.login form div {
+    text-align: left;
+    padding: 1rem 0.5rem 0.5rem;
+    background-color: #676767;
+    margin: 25px;
+    border-radius: 5px;
+}
+
+.login input::placeholder{
+    color: #c9c9c9;
+}
+
+.btn-login{
+    width: 40%;
+    margin: 0.7rem auto 0;
+    padding: 8px;
+    font-size: 1.3rem;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.1s ease-in-out;
+    background-color:#ff3d3d;
+    color:#fff;
+    border: none;
 
 }
+.btn-login:hover{
+    transform: scale(1.04);
+}
+
