--- a/src/Components/NavbarStyles.css
+++ b/src/Components/NavbarStyles.css
@@ -5,27 +5,39 @@
     height: 8vh;
     text-align: center;
 }
-
+.navbar a{
+    text-decoration: none;
+    color: #fff;
+}
 .navbar h1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin: 1vw 0 1vw 2vw;
     font-size: 2rem;
     font-weight: 700;
+    cursor: pointer;
+}
+.navbar h1 svg{
+    margin: 0.3rem;
 }
 .nav-h-span{
     color: #ff3d3d;
     font-size: 2.1rem;
 }
 .nav-search {
+    padding: 5px 0 0 0 !important;
     display: flex;
     align-items: center;
     flex-direction: row;
 }
 
-.navbar form {
+
+.nav-search form {
     display: flex;
 }
 
-.navbar form input {
+.nav-search form input {
     width: 40vw;
     height: 4.3vh;
     border-top-left-radius: 10px;
@@ -38,12 +50,12 @@
     color: white;
 }
 
-.navbar form input:focus {
+.nav-search form input:focus {
     border: 0.5px solid white;
     outline: none;
 }
 
-.navbar form button {
+.nav-search form button {
     height: 4.3vh;
     border-left: none;
     border-top-right-radius: 10px;
@@ -56,8 +68,11 @@
     justify-content: center;
     cursor: pointer;
     width: 2.5rem;
+    transition: 0.2s ease-in-out;
 }
-
+.nav-search form button:hover{
+    background-color: #ff3d3d;
+}
 .navbar form button svg {
     margin: 0;
     font-size: 1.3rem;
