--- a/src/Components/MediaCardStyles.css
+++ b/src/Components/MediaCardStyles.css
@@ -23,11 +23,14 @@
     letter-spacing: 0.2px;
     word-spacing: 1px;
 }
+.mediaCard a{
+    text-decoration: none;
+}
 .mediaCard .media-date{
     text-align: center;
     margin: 0.2rem 0 0 0;
 }
-.mediaCard ul{
+.mediacard-ul{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -35,7 +38,7 @@
     background-color: #000000;
     padding:3px;
 }
-.mediaCard ul li{
+.mediacard-ul li{
     list-style: none;
 }
 .imdb-svg{
@@ -46,7 +49,8 @@
     color: red;
     font-size: 1.5rem;
 }
-.add-watchlist{
+.get-info{
+    display: block;
     cursor: pointer;
     width: 60%;
     height: 7%;
@@ -56,7 +60,7 @@
     outline: none;
     border: none;
     border-radius: 3px;
-    margin: 1rem 0 0 0;
+    margin: 1rem auto 0;
     transition: 0.2s ease-in-out;
     padding: 0;
 }
@@ -69,21 +73,19 @@
     margin: 0 !important;
     padding: 0;
 }
-.add-watchlist:hover{
+
+.get-info:hover{
     transform: scale(1.1,1.1);
 }
 
-.add-watchlist div{
+.get-info div{
     display: flex !important;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     margin: 0 !important;
 }
-.add-watchlist p{
+.get-info p{
     font-size: 1.2rem;
-    margin: 0 0 0 0.7rem;
-}
-.add-watchlist svg{
-    font-size: 1.1rem;
+    margin: 0 0 0 0;
 }
