--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Poppins:wght@300;400;600;700;800;900&display=swap');
 
+:root {
+    --text-yellow: #edbf1b;
+    --text-red:#ff3d3d;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -14,7 +19,7 @@ body {
     padding: 0;
 }
 
-.wrapper{
+.wrapper {
     height: 92vh;
     display: flex;
     align-items: center;
