--- a/src/Components/HomeStyles.css
+++ b/src/Components/HomeStyles.css
@@ -1,27 +1,23 @@
 .home {
-    /* text-align: center; */
-    margin: 3vh 0 0 2vw;
-}
-
-.home-movies {
-    /* text-align: center; */
+    width: 85vw;
+    margin: 2rem auto 0;
 }
 
 .home h2 {
-    margin: auto auto 0 auto;
     font-size: 2.3rem;
+    margin: 0 0 0 3.5vw;
 }
 
 .home h3 {
     font-size: 1.5rem;
+    margin: 0 0 0 3.5vw;
 }
 
 .home hr {
-    margin: 0;
     border-color: #FACF5A;
     width: 70vw;
+    margin: 0 0 0 3.5vw;
 }
-
 
 .media-all {
     text-align: center;
