--- a/src/Components/MediaCardStyles.css
+++ b/src/Components/MediaCardStyles.css
@@ -1,32 +1,34 @@
-.mediaCard{
+.mediacard{
     border-radius: 20px;
-    width: 16rem;
-    height: 33rem;
+    width: 14rem;
+    height: 26rem;
     background-color: #0e0d0d;
     overflow: hidden;
 
 }
-.mediaCard img{
+.mediacard-link{
+    color: #fff;
+}
+.mediacard img{
     width: 100%;
-    height: 65%;
-    /* border-radius: 20px; */
+    height: 70%;
     border-top-left-radius:20px ;
     border-top-right-radius: 20px;
     object-fit:cover;
 }
-.mediaCard .media-title{
-    margin:0.8rem 0 0 0;
+.mediacard .media-title{
+    margin:0.5rem 0 0 0;
     padding: 0 1vw 0;
     text-align: center;
-    font-size: 1.1rem;
-    font-weight: 200;
+    font-size: 1.2rem;
+    font-weight: 400;
     letter-spacing: 0.2px;
     word-spacing: 1px;
 }
-.mediaCard a{
+.mediacard a{
     text-decoration: none;
 }
-.mediaCard .media-date{
+.mediacard .media-date{
     text-align: center;
     margin: 0.2rem 0 0 0;
 }
@@ -34,12 +36,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    /* margin: 1rem 0 0 0; */
     background-color: #000000;
-    padding:3px;
+    
 }
 .mediacard-ul li{
     list-style: none;
+    margin: 3px 0 3px 0;
 }
 .imdb-svg{
     color: #f5c518;
