redux initialized and spinner animation added

--- a/src/Components/authentication/LoginStyles.css
+++ b/src/Components/authentication/LoginStyles.css
@@ -4,7 +4,7 @@
     margin: auto;
     text-align: center;
     width: 40%;
-    height: 70%;
+    height: 78%;
     background-color: #2f2f2f;
     display: flex;
     align-items: center;
@@ -89,3 +89,7 @@
     transform: scale(1.04);
 }
 
+.auth-spinner{
+    width: 60px;
+    margin: auto;
+}
