--- a/src/Components/HomeStyles.css
+++ b/src/Components/HomeStyles.css
@@ -1,3 +1,11 @@
+.home-wrapper{
+    margin: auto;
+    width: 90vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .home {
     width: 85vw;
     margin: 2rem auto 0;
@@ -28,4 +36,7 @@
 .media-all div {
     display: inline-block;
     margin: 1rem;
+}
+.home-spinner{
+    margin: 30vh 0 0 0;
 }
