--- a/src/Components/mediaCard/MediaCardStyles.css
+++ b/src/Components/mediaCard/MediaCardStyles.css
@@ -1,57 +1,74 @@
-.mediacard{
+.mediacard {
     border-radius: 20px;
-    width: 14rem;
+    width: 12rem;
     height: 26rem;
     background-color: #0e0d0d;
     overflow: hidden;
-
+    transition: 0.1s ease-in-out;
 }
-.mediacard-link{
+.mediacard:hover{
+    transform: scale(1.02,1.02);
+}
+
+.mediacard-link {
     color: #fff;
 }
-.mediacard img{
+
+.mediacard img {
     width: 100%;
-    height: 70%;
-    border-top-left-radius:20px ;
+    aspect-ratio: auto 241 / 361;
+    border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    object-fit:cover;
+    object-fit: cover;
 }
-.mediacard .media-title{
-    margin:0.5rem 0 0 0;
+
+.mediacard .media-title {
+    margin: 0.5rem 0 0 0;
     padding: 0 1vw 0;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 400;
     letter-spacing: 0.2px;
     word-spacing: 1px;
 }
-.mediacard a{
+
+.mediacard a {
     text-decoration: none;
 }
-.mediacard .media-date{
+
+.mediacard .media-date {
     text-align: center;
     margin: 0.2rem 0 0 0;
 }
-.mediacard-ul{
+
+.mediacard-ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     background-color: #000000;
-    
 }
-.mediacard-ul li{
+
+.mediacard-ul li {
     list-style: none;
     margin: 3px 0 3px 0;
 }
-.imdb-svg{
+
+.mediacard-ul p{
+    font-size: 0.9rem;
+}
+
+
+.imdb-svg {
     color: #f5c518;
     font-size: 1.7rem;
 }
-.rTomato-svg{
+
+.rTomato-svg {
     color: red;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
-.get-info{
+
+.get-info {
     display: block;
     cursor: pointer;
     width: 60%;
@@ -66,8 +83,9 @@
     transition: 0.2s ease-in-out;
     padding: 0;
 }
-.metacritic-logo{
-    background-image: url('../assets/metacritic-logo.jpg') ;
+
+.metacritic-logo {
+    background-image: url('../../assets/metacritic-logo.jpg');
     background-color: #000000;
     width: 1.7rem;
     height: 1.7rem;
@@ -76,18 +94,19 @@
     padding: 0;
 }
 
-.get-info:hover{
-    transform: scale(1.1,1.1);
+.get-info:hover {
+    transform: scale(1.1, 1.1);
 }
 
-.get-info div{
+.get-info div {
     display: flex !important;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     margin: 0 !important;
 }
-.get-info p{
+
+.get-info p {
     font-size: 1.2rem;
     margin: 0 0 0 0;
 }
