--- a/src/Components/mediaCard/MediaCardStyles.css
+++ b/src/Components/mediaCard/MediaCardStyles.css
@@ -1,7 +1,6 @@
 .mediacard {
     border-radius: 20px;
-    width: 12rem;
-    height: 26rem;
+    width: 17%;
     background-color: #0e0d0d;
     overflow: hidden;
     transition: 0.1s ease-in-out;
@@ -17,16 +16,17 @@
 .mediacard img {
     width: 100%;
     aspect-ratio: auto 241 / 361;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     object-fit: cover;
 }
 
 .mediacard .media-title {
-    margin: 0.5rem 0 0 0;
+    height: 60px;
+    margin: 0.5rem 0 0.5rem 0;
     padding: 0 1vw 0;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 400;
     letter-spacing: 0.2px;
     word-spacing: 1px;
@@ -42,6 +42,7 @@
 }
 
 .mediacard-ul {
+    height: 56px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -106,7 +107,8 @@
     margin: 0 !important;
 }
 
-.get-info p {
+.get-info  {
+    /* height: 100px; */
     font-size: 1.2rem;
     margin: 0 0 0 0;
 }
