--- a/src/Components/searchResults/searchResultsStyles.css
+++ b/src/Components/searchResults/searchResultsStyles.css
@@ -3,19 +3,37 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: auto;
+    margin: 0 0 0 0;
 }
 
 .s-data-wrapper{
     width: 85vw;
+    margin: 2rem auto 0;
+}
+.s-data-wrapper hr{
+    width: 91%;
+    margin: auto;
+}
+.s-data-wrapper h2{
+margin: 0 0 0 4.5%;
+font-size: 2.3rem;
+color: var(--text-yellow);
 }
 .s-data{
     text-align: center;
     padding: 0  0;
     width: 100%;
+    margin: 1rem 0 0 0;
 }
-
 .s-data div{
     display: inline-block;
     margin: 1rem;
+}
+.s-spinner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    padding: 30vh 0 0 0;
+    overflow: inherit;
 }
