--- a/src/Components/authentication/LoginStyles.css
+++ b/src/Components/authentication/LoginStyles.css
@@ -30,13 +30,12 @@
 
 .login form a {
     width: 60%;
-    margin: auto;
+    margin: 2rem auto 0;
 }
 
 .login form a button {
     width: 100%;
     padding: 0.5rem 0 0.5rem 0;
-    margin: 2rem 0 0 0;
     cursor: pointer;
     font-size: 1.1rem;
     font-weight: 400;
