--- a/src/Components/searchResults/searchResultsStyles.css
+++ b/src/Components/searchResults/searchResultsStyles.css
@@ -37,3 +37,7 @@ color: var(--text-yellow);
     padding: 30vh 0 0 0;
     overflow: inherit;
 }
+.sorry-msg{
+    margin: 2rem 0 0 0 ;
+    font-size: 2rem;
+}
