--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
     padding: 0;
     background-color: #171717;
     color: white;
+    position: relative;
 }
 
 * {
@@ -20,7 +21,28 @@ body {
 }
 
 .wrapper {
-    height: 92vh;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 16px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: #555;
+    box-shadow: inset 0 0 3px rgb(149, 149, 149);
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
