--- a/src/Components/home/HomeStyles.css
+++ b/src/Components/home/HomeStyles.css
@@ -70,7 +70,8 @@
     display: inline-block;
     margin: 1%;
 }
-.h-show-more{
+
+.h-show-more {
     font-size: 1.1rem;
     border-radius: 5px;
     display: flex;
@@ -83,6 +84,52 @@
     cursor: pointer;
     margin: 20px auto 0;
 }
-.h-show-more:hover{
+
+.h-show-more:hover {
     transform: scale(1.06);
+}
+
+
+
+@media only screen and (max-width: 1100px) {
+    .h-wrapper {
+        width: 100vw;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .mediacard {
+        width: 20%;
+    }
+
+}
+
+@media only screen and (max-width: 700px) {
+    .home {
+        width: 100% !important;
+    }
+
+    .home h2 {
+        font-size: 2rem;
+        margin: 0 0 0 5%;
+    }
+
+    .home hr {
+        border-color: #FACF5A;
+        width: 90%;
+        margin: auto;
+    }
+
+    .home h3 {
+        font-size: 1.3rem;
+        margin: 2.3% 0 1% 6%;
+        display: flex;
+        align-items: center;
+        max-height: 2.4rem;
+        position: relative;
+        width: 50%;
+    }
+    .home h3:hover .h-playlist-icon {
+        transform: translate(0);
+    }
 }
