components rearranged, improved mediaInfo functionality

--- a/src/Components/MediaCardStyles.css
+++ b/src/Components/MediaCardStyles.css
@@ -87,7 +87,7 @@
 }
 
 .metacritic-logo {
-    background-image: url('../../assets/metacritic-logo.jpg');
+    background-image: url('../assets/metacritic-logo.jpg');
     background-color: #000000;
     width: 1.7rem;
     height: 1.7rem;
